--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,5 @@
-streamlit==1.46.0
-openai==1.99.9
-langfuse==2.50.0
+streamlit>=1.28.0
+openai>=1.3.0
+langfuse>=2.0.0
 requests>=2.31.0
+python-dotenv>=1.0.0
